--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Godery</title>
 		<script charset="UTF-8" src="/tj.js"></script>
 		<script language="javascript" type="text/javascript">
-			window.location.href = 'https://oo1ftwj1sb.feishu.cn/wiki/HGYnwyz7biWrXTkJfDfcBDl7nfc?table=tblF9pdwtaQmfKLG';
+			window.location.href = 'https://oo1ftwj1sb.feishu.cn/wiki/AG7Iwp51Vi8MfMkuOypcBU9LnDf';
 		</script>
 	</head>
 	<body>
