--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Godery</title>
+		<title>zc3123.com</title>
 		<script charset="UTF-8" src="/tj.js"></script>
 		<script language="javascript" type="text/javascript">
 			window.location.href = 'https://oo1ftwj1sb.feishu.cn/wiki/AG7Iwp51Vi8MfMkuOypcBU9LnDf';
